<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="7dp"
    android:background="@drawable/bg_cardlist"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="4dip"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:contentDescription="@string/description_image_liste" />

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:paddingLeft="5dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:scaleType="center"
                android:background="@drawable/google_ico"
                android:contentDescription="@string/description_image_liste" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" >

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#5C5C5C"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle"
                    android:textColor="#5C5C5C"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:singleLine="false"
            android:text="@string/content"
            android:textColor="#5C5C5C" />

        <TextView
            android:id="@+id/tv_receiptdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:textSize="12sp"
            android:textStyle="italic"
            android:text="@string/receipt"
            android:textColor="#5C5C5C" />
    </LinearLayout>

</LinearLayout>